feat(ueberwachung): IFS-979 replace fields referenced in zaehleAufruf with Atomic types * also replace letzteMinute to minimize thread locking